--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -39,6 +39,7 @@ a:hover {
 .container {
   text-align: center;
   max-width: 950px; 
+  min-width: 450px; 
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
