--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,7 +24,6 @@ a:hover {
 .container {
   text-align: center;
   max-width: 950px;
-  min-width: 450px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px; }
@@ -34,10 +33,13 @@ header {
   text-align: left;
   background: #026160;
   color: #ffffff; }
+  @media screen and (max-width: 460px) {
+    header {
+      padding: 16px; } }
   header .title {
     font-size: 42px; }
   header .description {
-    padding-top: 30px;
+    padding-top: 10px;
     font-size: 18px; }
 
 .bar {
@@ -50,7 +52,11 @@ header {
   .bar ul {
     list-style-type: none; }
     .bar ul li {
-      display: inline; }
+      display: inline;
+      white-space: nowrap; }
+      @media screen and (max-width: 460px) {
+        .bar ul li {
+          display: block; } }
 
 .content {
   background-color: #dddddd;
@@ -59,6 +65,9 @@ header {
   text-align: left;
   border-top: 1px solid #bbbbbb;
   border-bottom: 1px solid #ffffff; }
+  @media screen and (max-width: 460px) {
+    .content {
+      padding: 16px; } }
   .content .title {
     padding-bottom: 5px;
     font-size: 18px; }
