--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -7,128 +7,144 @@ $content-background-color: #dddddd;
 $content-border-top-color: #bbbbbb;
 $content-border-bottom-color: $bar-background-color;
 
+$screen-width-treshhold: 460px;
+
 body {
-  margin: 0;
-  padding: 0;
-  background: $body-background-color;
-  font-family: Verdana;
+	margin: 0;
+	padding: 0;
+	background: $body-background-color;
+	font-family: Verdana;
 }
 
 p {
-  font-size: 12px;
+	font-size: 12px;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .highlight {
-  color: $theme-color;
-  font-weight: bold;
+	color: $theme-color;
+	font-weight: bold;
 }
 
 .lowlight {
-  opacity: 0.7;
+	opacity: 0.7;
 }
 
 .container {
-  text-align: center;
-  max-width: 950px; 
-  min-width: 450px; 
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
+	text-align: center;
+	max-width: 950px; 
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 30px;
 }
 
 header {
-  padding: 30px;
-  text-align: left;
-  background: $theme-color;
-  color: $header-text-color;
+	padding: 30px;
 
-  .title {
-    font-size: 42px;
-  }
+	@media screen and (max-width: 460px) {
+		padding: 16px;
+	}
 
-  .description {
-    padding-top: 30px;
-    font-size: 18px;
-  }
+	text-align: left;
+	background: $theme-color;
+	color: $header-text-color;
+
+	.title {
+		font-size: 42px;
+	}
+
+	.description {
+		padding-top: 10px;
+		font-size: 18px;
+	}
 }
 
 .bar {
-  padding: 4px;
-  padding-right: 16px;
-  background-color: $bar-background-color;
-  color: $bar-text-color;
-  font-size: 10px;
-  text-align: right;
+	padding: 4px;
+	padding-right: 16px;
+	background-color: $bar-background-color;
+	color: $bar-text-color;
+	font-size: 10px;
+	text-align: right;
 
-  ul {
-    list-style-type: none;
+	ul {
+		list-style-type: none;
 
-    li {
-      display: inline;
-    }
-  }
+		li {
+			display: inline;
+			white-space: nowrap;
+			@media screen and (max-width: $screen-width-treshhold) {
+				display: block;
+			}
+		}
+	}
 }
 
 .content {
-  background-color: $content-background-color;
-  min-height: 200px;
-  padding: 30px;
-  text-align: left;
-  border-top: 1px solid $content-border-top-color;
-  border-bottom: 1px solid $content-border-bottom-color;
+	background-color: $content-background-color;
+	min-height: 200px;
+	padding: 30px;
 
-  .title {
-    padding-bottom: 5px;
-    font-size: 18px;
-  }
+	@media screen and (max-width: $screen-width-treshhold) {
+		padding: 16px;
+		
+	}
+
+	text-align: left;
+	border-top: 1px solid $content-border-top-color;
+	border-bottom: 1px solid $content-border-bottom-color;
+
+	.title {
+		padding-bottom: 5px;
+		font-size: 18px;
+	}
 }
 
 h1 {
-  font-size: 20px;
-  color: $theme-color;
+	font-size: 20px;
+	color: $theme-color;
 }
 
 h2 {
-  font-size: 13px;
-  color: $theme-color;
+	font-size: 13px;
+	color: $theme-color;
 }
 
 .category {
-  color: $theme-color;
-  font-size: 10px;
-  margin-top: 10px;
+	color: $theme-color;
+	font-size: 10px;
+	margin-top: 10px;
 }
 
 .tool {
-  font-size: 12px;
-  margin-left: 0;
-  line-height: 150%;
+	font-size: 12px;
+	margin-left: 0;
+	line-height: 150%;
 
-  ul {
-    list-style-type: none;
-    margin: 3px;
-    padding: 0;
+	ul {
+		list-style-type: none;
+		margin: 3px;
+		padding: 0;
 
-    li:after {
-      color: $theme-color;
-      content: ",";
-    }
+		li:after {
+			color: $theme-color;
+			content: ",";
+		}
 
-    li:last-child:after {
-      content: "";
-    }
+		li:last-child:after {
+			content: "";
+		}
 
-    li {
-      display: inline;
-    }
-  }
+		li {
+			display: inline;
+		}
+	}
 }
